# gubernator

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.mock  README.md  build.rs  docker-compose.yaml
.github/workflows/: build-rust.yaml
docs/: 00-introduction.md
examples/: echo.yaml
gubernator/: Cargo.toml  build.rs
gubernator/src/: lib.rs
gubernator/src/cli/: apply.rs  config.rs  mod.rs
gubernator_container/: Cargo.toml
gubernator_controller/: Cargo.toml
gubernator_cri/: Cargo.toml  build.rs
gubernator_cri/proto/: cri.proto
gubernator_cri/src/: lib.rs
gubernator_cri/src/mock/: image.rs  runtime.rs
gubernator_manifest/: Cargo.toml
gubernator_manifest/src/: common.rs  lib.rs  manifest.rs
gubernator_message/: Cargo.toml
gubernator_proxy/: Cargo.toml
gubernator_service_test/: Cargo.toml
gubernator_state/: Cargo.toml
gubernator_state/src/: lib.rs
src/: lib.rs
src/cli/: auth.rs  config.rs  init.rs  mod.rs
src/controller/: mod.rs  node.rs
src/service/: cri.rs
