[package]
name = "gubernator"
description = "Container orchestration"
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
prost = "0.8"
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"

[lib]
name = "gubernator"
path = "src/lib.rs"

[[bin]]
name = "gubernator"
path = "src/cli/mod.rs"
